--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -10,5 +10,6 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
-flyway:
+  flyway:
+    enabled: false
   baselineOnMigrate: true
